syntax = "proto3";

package karma;

message KarmaParams {
    int64 max_karma = 1;
    string oracle_public_address = 2;
    map<string, int64> sources = 3;
}

message KarmaUser {
    string address = 1;
}

message KarmaParamsOracle {
    KarmaParams Params = 1;
    KarmaUser Oracle = 2;
}

message KarmaParamsOracleNewMaxKarma {
    int64 max_karma = 1;
    KarmaUser Oracle = 2;
}

message KarmaParamsOracleNewOracle {
    string new_oracle_public_address = 1;
    KarmaUser Oracle = 2;
}

message KarmaConfig {
    int64 max_karma = 1;
    KarmaUser Oracle = 2;
    map<string, int64> sources = 3;
    int64 last_update_time = 4;
}

message KarmaSource {
    string name = 1;
    int64 reward = 2;
}

message KarmaState {
    map<string, int64> source_states = 1;
    int64 last_update_time = 2;
}

message KarmaStateUser {
    map<string, int64> source_states = 1;
    KarmaUser User = 2;
    KarmaUser Oracle = 3;
}

message KarmaStateKeyUser {
    repeated string state_keys = 1;
    KarmaUser User = 2;
    KarmaUser Oracle = 3;
}

message KarmaInitRequest {
    KarmaParams Params = 1;
}

message KarmaUserToken{
    KarmaUser Owner = 1;
    int64 token_count = 2;
}

message KarmaTotal{
    int64 count = 1;
}

